--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "autoprefixer": "^9.0.0",
     "browser-sync": "^2.24.5",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.1",
     "gulp.spritesmith": "^6.9.0",
-    "rimraf": "^2.6.2",
-    "sourcemap": "^0.1.0"
+    "rimraf": "^2.6.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
